custom.css
@charset "UTF-8";
/* use this font to have scaleable vector icons that you can change styles with css. 
reference for character mapping here: http://www.justbenicestudio.com/studio/websymbols/ */

@font-face {
    font-family: 'WebSymbolsRegular';
    src: url('img/fonts/websymbols-regular-webfont.eot');
    src: url('img/fonts/websymbols-regular-webfont.eot?#iefix') format('embedded-opentype'),  url('img/fonts/websymbols-regular-webfont.woff') format('woff'),  url('img/fonts/websymbols-regular-webfont.ttf') format('truetype'),  url('img/fonts/websymbols-regular-webfont.svg#WebSymbolsRegular') format('svg');
    font-weight: normal;
    font-style: normal;
}
.icon-font {
    font-family: 'WebSymbolsRegular';
}
/* prevent images from extending beyond their container or mobile viewport */
img[src^=#] {
    max-width: 100%;
    background: url(img/ratio-loading.gif) no-repeat center center;
    background-size: 50% auto;
}
#home header {
    background-color:rgba(56,178,205,1);
    text-align: center;
}
#home header > img {
    height:50px;
}
.ui-input-search {
    background:white !important;    
}
.center {
    text-align: center;
    margin: 0 auto;
}
.left {
	float: left;
}
.right {
	float: right;
}
.pad-right {
    padding-right: 10px;
}
.margin-bottom-ten {
    margin-bottom: 10px;
}
.lots-of-space {
    margin: 70px auto 40px auto;
}
.icon-only > .ui-btn-inner {
    height: 15px;
    padding-left: 18px !important;
}
.ui-btn-taller {
    padding: 30px 0;
}
.ui-content {
    padding: 0;
}
.loading {
    text-align:center;
    padding:200px 20px 120px 20px;
    font-size:40px;
    color:#eee;
    font-weight:bold;
    font-family:"Sonsie One";
    text-shadow:0 -1px 0 #ccc, 0 2px 0 white;
    
    background-image: url(img/ratio-loading.gif);
    background-repeat: no-repeat;
    background-position: center center;
    background-size:100px auto;
}
#add-nerd .ui-content, #add-nerd-meta .ui-content, #remove-nerd-meta .ui-content {
    padding: 15px;
}
.ui-content .ui-listview, .ui-listview-filter {
    margin: 0;
    background:white;
}
#home .ui-icon-searchfield:after {
    font-family: "WebSymbolsRegular";
    content:"L";
    background:none;
    color:#999;
    text-shadow:0 1px 0 white;
}
.ui-listview {
    background: white;
}
.ui-icon-loading {
    background: url(img/ratio-loading.gif) no-repeat center center;
    background-size: 100% auto;
    opacity: 1 !important;
}
.ui-loader {
    border-radius: 50%;
    height: 50px !important;
    width: 32px !important;
    padding-top: 27px;
    margin-left: -50px !important;
    margin-top: -75px !important;
    background: #ccc;
    border: 1px solid #999;
}
.ui-loader > h1 {
	display:none;
}
.spin {
	animation-name:none;
	width:70px !important;
	height:30px !important;
	position:relative !important;
	left:-18px;
}
.ui-btn-corner-all {
	border-radius:0 !important;
}
.ui-btn-up-c, .ui-btn-hover-c {
	background:none;
}
.ui-btn-down-c {
    border-top-color: #ccc !important;
}
.ui-btn-active, .ui-btn-active a, .ui-link, .ui-link:visited {
    color: #111 !important;
    text-shadow:none;
    border-top-color:#ccc !important;
}
.extruded.ui-link {
    color: #666 !important;
}
.ui-btn-up-c a.ui-link-inherit {
    color: #333;
}
.ui-li-has-icon .ui-btn-inner a.ui-link-inherit {
    padding-left: 15px !important;
}
.ui-listview .ui-li-icon {
    position: inherit !important;
    margin-top: 5px;
}
.ui-listview img.ui-li-icon {
    background-image: url(img/ratio-loading.gif) no-repeat center center;
    background-size:50% auto;
    width:40px;
    height:40px;
    max-width:40px;
    max-height:40px;
}
#home .ui-listview .ui-btn:after, #nerd .ui-listview .ui-btn[item-role="link"]:after {
    font-family: "WebSymbolsRegular";
    content:"]";
    position:absolute;
    right:15px;
    top:50%;
    margin-top:-6px;
    font-size:10px;
}

.user-li-placeholder {
    padding: 18px 20px 10px 10px;
}
#nerd-pic {
    background-position: center center;
    background-repeat:no-repeat;
    background-size:100% auto;
	width: 250px;
    height: 250px;
}
 #new-nerd-meta-btn {
    display: block;
    width: 285px;
    margin-bottom: 0;
    margin-top:70px !important;
}
#new-nerd-btn, #refresh-list-btn {
    display: inherit;
    width: 150px;
}
h1#name {
    text-shadow: none;
    font-size: 21px;
    margin-bottom: 4px;
	color: #ccc;
    padding:10px 0 12px 0;
    margin-top:0;
    color:black;
}
#nerd-info li span.icon-font {
    width: 20px;
    display: inline-block;
    text-align: center;
    color: #999;
}
#remove-meta-btn {
    margin-top: 20px;
    display: block;
    width: 285px;
}
#nerd-info i {
    font-style:normal;
    padding:3px 5px;
    margin-right:5px;
    border-radius:5px;
    display:inline-block;
    background:#ddd;
    text-shadow:0 1px 0 white;
}
.ui-header .extruded {
    margin-top:3px;
}
.ui-bar-c {
    background:rgba(56,178,205,1);
    border:none;
}
.extruded {
	width: auto;
	height: auto;
	background: #FFF;
    text-decoration: none;
    border-radius: 3px;
	border: 1px solid rgba(0, 0, 0, 0.30);
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.18),  inset 0 -3px 0 rgba(0, 0, 0, 0.15) !important;
	cursor: pointer;
	transition: all 0.1s ease-in-out;
}
.extruded.ui-btn-down-c:active,  .ui-bar-c.extruded.ui-btn-down-c:active {
	 border-top: 1px solid rgba(0, 0, 0, 0.75);
 	box-shadow: 0 2px 1px rgba(255, 255, 255, 0.50),  inset 0 1px 4px rgba(0, 0, 0, 0.35) !important;
	cursor: pointer !important;
	transition: all 0.07s ease-in-out;
}

